--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@uiw/react-heat-map": "^2.0.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -17,6 +18,7 @@
     "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
